# ai-cdss

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject-dev.toml  pyproject-old.toml  pyproject.toml  recommend.py  search.html  searchindex.js  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_static/: modal.js  style.css
api/: ai_cdss.config.html  ai_cdss.html  architecture.html  cdss.html  configuration.html  flow.html  index.html  models.html  modules.html  processor.html  static.html
app/: Dockerfile  config.py  dependencies.py  main.py  schemas.py
auto_examples/: index.html  recommend_usage.html  sg_execution_times.html
doc/: make.py
evaluation/: synthetic.py
examples/: recommend_usage.py  recommendation_1_new.csv  scored_features.csv
guide/: decision_process.html  implementation.html  index.html  interpretation.html  introduction.html  justification.html  limitation.html  overview.html  patient.html  patient_story.html  scoring.html
notebooks/: dm_curve.ipynb  dm_fit_histograms_report.html  dm_fit_report.html  dm_metric_indepth.ipynb  dm_nest.ipynb  dm_nest_session_level.ipynb  generate_dataset.ipynb  generate_week_historgams_metrics.py  init_metrics.csv  legacy_metrics.ipynb  logistic_fit_summary.csv  mapping.yaml  mixedlm_protocol_adherence_results.txt  nest_adh.ipynb  nest_decision_benchmark.ipynb  nest_scores.ipynb  novelty.ipynb  pipeline.ipynb  pipeline_test.ipynb  prescriptions.ipynb  recommendation.parquet  recommendations.csv  refactor-idea.ipynb  refactor_all.ipynb  rgs_interaction.csv  rgs_timeseries.csv  scales.json  simplify.ipynb  simulation.ipynb  test.parquet  test_cdss.ipynb  test_compute_ppf.ipynb  test_db_inconsistencies.ipynb  test_processor.ipynb  test_refactor.ipynb  test_serialization.ipynb  utils.py
scripts/: animation_scheduling.py  compute_ppf.py  debug_clinical_from_db.py  debug_pipeine.py  debug_pipeline.py  debug_ppf_upsert.py  debug_processing.py  debug_recsys_pipeline.py  debug_subscales.py  simulate_nest.py  simulate_phrase.py
technical/: index.html  patient.html  scoring.html
tests/: TEST_PLAN.md  (+4 more)
(+161 files in other folders)
