[project]
name = "ai-cdss"
version = "0.2.0"
description = "The EOD Clinical Decision Support System uses RGS data, and patient clinical scores (ARAT, MoCA) to provide data-driven recommendation to clinicians of the best RGS activities a patient should perform."
authors = [
    {name = "Eodyne Systems SL"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandera (>=0.23.1,<0.24.0)",
    "gower (>=0.1.2,<0.2.0)",
    "rgs_interface @ git+https://github.com/dabadav/rgs-interface.git@v0.4.0",
    "pandas[parquet] (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]
packages = [{ include = "ai_cdss", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.1.0"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^8.3.5"
sphinx-pandera = "^0.0.5"
pydata-sphinx-theme = "^0.16.1"
myst-parser = "^4.0.1"
sphinx-design = "^0.6.1"
mypy = "^1.15.0"
pandera = {extras = ["strategies"], version = "^0.23.1"}
sphinx-gallery = "^0.19.0"
jinja2 = "^3.1.6"
pluggy = "^1.5.0"
numpydoc = "^1.8.0"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-revealjs = "^3.1.4"
pytest-cov = "^6.1.0"
ipython = "^9.0.2"

[tool.poetry.group.api.dependencies]
pydantic-settings = "^2.8.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"

[tool.poetry.scripts]
docs = "sphinx.cmd.build:main"